docs/source/assets/styles/layout/_footer.sass
footer.bd-footer
  padding: 48px 0 
  background-color: #000
  color: #ffffff66
  font-size: 14px
  font-weight: 500
  border-top: 0

  @media (min-width: 768px)
    padding: 48px 0 64px 0

  a
    color: #ffffff66
    text-decoration: none

    &:hover
      color: #ffffff
      text-decoration: none

  .bd-footer__inner
    flex-direction: column
    padding: 0 20px

  .footer-logo
    display: flex
    justify-content: space-between
    flex-direction: column
    align-items: flex-start
    gap: 24px

    @media (min-width: 768px)
      flex-direction: row

    .logo__image
      height: 32px

    .book-a-demo
      height: 50px
      background-color: #ffffff40 !important

      .arrow
        height: 42px
        width: 42px
        background-color: #ffffff40

      &:hover
        .arrow
          transform: translate3d(153.19px, 0px, 0px)
          color: #000
          background-color: #ffffff

        .text
          transform: translate3d(-42px, 0px, 0px)

  .footer-links
    display: grid
    margin-top: 48px
    padding-top: 24px
    border-top: 1px solid #181a1b
    grid-template-columns: repeat(4, minmax(0, 1fr));
    column-gap: 16px
    row-gap: 48px

    @media (min-width: 768px)
      grid-template-columns: repeat(12, 1fr)

    .footer-links__item
      display: flex
      flex-direction: column
      gap: 16px
      line-height: 1.3
      grid-column: span 2

      div
        color: #ffffff
        width: fit-content

      a
        color: #ffffff99
        letter-spacing: -0.14px
        width: fit-content

        &:hover
          color: #ffffff

    .social-icons
      display: flex
      gap: 8px
      grid-column: span 4
      flex-wrap: wrap
      align-content: flex-start

      @media (min-width: 768px)
        grid-column: span 2

      a
        height: 42px
        width: 42px
        color: #ffffff
        border-radius: 50%
        background-color: #313435
        display: flex
        align-items: center
        justify-content: center
        transition: background-color 0.15s ease

        &:hover
          background-color: #313435cc

        svg
          height: 16px
          width: 16px

  .footer-items
    display: flex
    margin-top: 48px
    padding-top: 24px
    gap: 16px
    flex-direction: column
    line-height: 1.3

    @media (min-width: 768px)
      flex-direction: row

    .footer-items__end
      display: flex
      justify-content: center
      align-items: flex-start

      @media (min-width: 768px)
        align-items: flex-end

      .footer-legal-links
        display: flex
        align-items: center

    .footer-links__divider
      display: inline-block
      width: 1px
      height: 12px
      background-color: #ffffff66
      margin: 0 8px

